{
  "version": 4,
  "terraform_version": "1.4.0",
  "serial": 392,
  "lineage": "656d7639-1ea6-ac52-445c-9bc4bfe3dca7",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:743025970192:internet-gateway/igw-0e2ec90818e6fc4ad",
            "id": "igw-0e2ec90818e6fc4ad",
            "owner_id": "743025970192",
            "tags": {
              "Environment": "Testing",
              "Name": "ex-terraform-aws-vpc"
            },
            "tags_all": {
              "Environment": "Testing",
              "Name": "ex-terraform-aws-vpc"
            },
            "vpc_id": "vpc-001ea1b83d0ff4e41"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e2ec90818e6fc4ad",
            "id": "r-rtb-00a3235637c60c2b31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00a3235637c60c2b3",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:743025970192:route-table/rtb-014e8bfcee4462cd8",
            "id": "rtb-014e8bfcee4462cd8",
            "owner_id": "743025970192",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Testing",
              "Name": "ex-terraform-aws-vpc"
            },
            "tags_all": {
              "Environment": "Testing",
              "Name": "ex-terraform-aws-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-001ea1b83d0ff4e41"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:743025970192:route-table/rtb-00a3235637c60c2b3",
            "id": "rtb-00a3235637c60c2b3",
            "owner_id": "743025970192",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e2ec90818e6fc4ad",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Testing",
              "Name": "ex-terraform-aws-vpc"
            },
            "tags_all": {
              "Environment": "Testing",
              "Name": "ex-terraform-aws-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-001ea1b83d0ff4e41"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cace06be6570ce68",
            "route_table_id": "rtb-014e8bfcee4462cd8",
            "subnet_id": "subnet-011779a9e6e38ffd1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b84f509b712cf4cb",
            "route_table_id": "rtb-014e8bfcee4462cd8",
            "subnet_id": "subnet-0525d787034c9ca5d"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-010254322b22a79f5",
            "route_table_id": "rtb-014e8bfcee4462cd8",
            "subnet_id": "subnet-03c8137b2ab877e47"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09c07ae4225fd540a",
            "route_table_id": "rtb-00a3235637c60c2b3",
            "subnet_id": "subnet-0ecce90b247ec3653"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0197fe71652d6bcdc",
            "route_table_id": "rtb-00a3235637c60c2b3",
            "subnet_id": "subnet-0a94605c7abc32b0f"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03a500a65b74bfae8",
            "route_table_id": "rtb-00a3235637c60c2b3",
            "subnet_id": "subnet-0e2fd2d84ff28f73c"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:743025970192:subnet/subnet-011779a9e6e38ffd1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-011779a9e6e38ffd1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "743025970192",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Testing",
              "Name": "ex-terraform-aws-vpc-us-west-2a-private"
            },
            "tags_all": {
              "Environment": "Testing",
              "Name": "ex-terraform-aws-vpc-us-west-2a-private"
            },
            "vpc_id": "vpc-001ea1b83d0ff4e41"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:743025970192:subnet/subnet-0525d787034c9ca5d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0525d787034c9ca5d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "743025970192",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Testing",
              "Name": "ex-terraform-aws-vpc-us-west-2b-private"
            },
            "tags_all": {
              "Environment": "Testing",
              "Name": "ex-terraform-aws-vpc-us-west-2b-private"
            },
            "vpc_id": "vpc-001ea1b83d0ff4e41"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:743025970192:subnet/subnet-03c8137b2ab877e47",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03c8137b2ab877e47",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "743025970192",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Testing",
              "Name": "ex-terraform-aws-vpc-us-west-2c-private"
            },
            "tags_all": {
              "Environment": "Testing",
              "Name": "ex-terraform-aws-vpc-us-west-2c-private"
            },
            "vpc_id": "vpc-001ea1b83d0ff4e41"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:743025970192:subnet/subnet-0ecce90b247ec3653",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ecce90b247ec3653",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "743025970192",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Testing",
              "Name": "ex-terraform-aws-vpc-us-west-2a-public",
              "availability-zone": "us-west-2a"
            },
            "tags_all": {
              "Environment": "Testing",
              "Name": "ex-terraform-aws-vpc-us-west-2a-public",
              "availability-zone": "us-west-2a"
            },
            "vpc_id": "vpc-001ea1b83d0ff4e41"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:743025970192:subnet/subnet-0a94605c7abc32b0f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a94605c7abc32b0f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "743025970192",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Testing",
              "Name": "ex-terraform-aws-vpc-us-west-2b-public",
              "availability-zone": "us-west-2b"
            },
            "tags_all": {
              "Environment": "Testing",
              "Name": "ex-terraform-aws-vpc-us-west-2b-public",
              "availability-zone": "us-west-2b"
            },
            "vpc_id": "vpc-001ea1b83d0ff4e41"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:743025970192:subnet/subnet-0e2fd2d84ff28f73c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e2fd2d84ff28f73c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "743025970192",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Testing",
              "Name": "ex-terraform-aws-vpc-us-west-2c-public",
              "availability-zone": "us-west-2c"
            },
            "tags_all": {
              "Environment": "Testing",
              "Name": "ex-terraform-aws-vpc-us-west-2c-public",
              "availability-zone": "us-west-2c"
            },
            "vpc_id": "vpc-001ea1b83d0ff4e41"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:743025970192:vpc/vpc-001ea1b83d0ff4e41",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09b5dd241567bfe2a",
            "default_route_table_id": "rtb-0d035ebeaf16f94e1",
            "default_security_group_id": "sg-0b1953f9c367262ea",
            "dhcp_options_id": "dopt-023d2b40acc15c60d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-001ea1b83d0ff4e41",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d035ebeaf16f94e1",
            "owner_id": "743025970192",
            "tags": {
              "Environment": "Testing",
              "Name": "ex-terraform-aws-vpc-vpc"
            },
            "tags_all": {
              "Environment": "Testing",
              "Name": "ex-terraform-aws-vpc-vpc"
            }
          }
        }
      ]
    }
  ]
}